# RfqMatchmaker

./: .env.example  .replit  Makefile  README.md  jest.config.js  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix  run-tests.sh  run_streamlit.py  start_backend.py  theme.json
.github/workflows/: ci.yml
attached_assets/: Pasted-1-10-30-PM-python-Python-Error-INFO-Application-startup-complete-1-14-17-PM-express-For-1742303939762.txt  Pasted-Landing-Page-Content-for-the-Supplier-Matching-Platform-Headline-Find-the-Perfect-Supplier-for-Yo-1742080703107.txt  Pasted-RFQ-for-High-School-Computer-Class-Equipment-RFQ-Details-Title-Supply-and-Delivery-of-Laptops-and-1742054639694.txt  Pasted-RFQ-for-High-School-Computer-Class-Equipment-RFQ-Details-Title-Supply-and-Delivery-of-Laptops-and-1742055291323.txt  Pasted-The-MVP-platform-will-automate-supplier-matching-for-RFQs-Request-for-Quotations-by-leveraging-AI--1742054636235.txt  gpu_case.txt
client/src/: App.tsx
python_backend/: __init__.py  main.py  pytest.ini
python_backend/api/: __init__.py  app.py  routes.py
python_backend/models/: __init__.py  database.py  db_storage.py  sample_data.py  schemas.py  storage.py
python_backend/services/: __init__.py  ai_hardware_matching.py  ai_service.py  compliance_service.py  product_scraper.py  vector_service.py  (+1 more)
server/: db.ts  index.ts  routes.ts  storage.ts
shared/: schema.ts
streamlit_frontend/: Home.py  __init__.py
tests/: email-composition.test.ts  rfq-processing.test.ts  setup.ts  text-extraction.test.ts
uploads/: sample_rfq.txt  test_rfq.txt
(+39 files in other folders)
