[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.11",
    "jinja2>=3.1.6",
    "openai>=1.66.3",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "streamlit>=1.43.2",
    "uvicorn>=0.34.0",
]
